@@ -2,6 +2,7 @@
 
 	* Implement launching state with yellow backgroud.
 	* Implement 'remove from dock' function.
+	* Save docked gnustep applications.
 
 2007-02-28 Yen-Ju Chen <yjchenx at gmail>
 
